# ballistic-solver

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  codeql.yml  pypi.yml  release.yml  wheel.yml
bindings/python/: CMakeLists.txt  pybind_module.cpp  pyproject.toml
bindings/python/ballistic_solver/: __init__.py
examples/: basic.cpp
examples/c/: basic.c
examples/csharp/: BallisticCSharp.csproj  Program.cs
examples/python/: basic.py
include/: ballistic_solver_c_api.h
include/ballistic/: ballistic_c_api.h  ballistic_solver.hpp
python/: pyproject.toml  smoke_ctypes.py
python/ballistic_solver/: __init__.py
python/ballistic_solver.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/: ballistic_c_api.cpp
tests/: smoke_test.cpp
