[build-system]
requires = [
  "scikit-build-core>=0.11",
  "pybind11>=2.11",
]
build-backend = "scikit_build_core.build"

[project]
name = "ballistic-solver"
version = "0.3.2"
requires-python = ">=3.10"
readme = "README.md"
license = "MIT"

[tool.scikit-build]
cmake.source-dir = "bindings/python"
cmake.build-type = "Release"
wheel.packages = ["bindings/python/ballistic_solver"]

sdist.include = ["include/**", "src/**", "bindings/python/**", "CMakeLists.txt"]
